--- a/dlnaexport/extra/qtsoap/CMakeLists.txt
+++ b/dlnaexport/extra/qtsoap/CMakeLists.txt
@@ -1,28 +1,33 @@
+#
+# Copyright (c) 2010-2014, Gilles Caulier, <caulier dot gilles at gmail dot com>
+#
+# Redistribution and use is allowed according to the terms of the BSD license.
+# For details see the accompanying COPYING-CMAKE-SCRIPTS file.
 
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}
+include_directories(${CMAKE_CURRENT_BINARY_DIR}
                     ${CMAKE_CURRENT_BINARY_DIR}/src
                     src
                     ${QT_INCLUDE_DIR}
                    )
 
-SET(QtSoap_SRCS src/qtsoap.cpp)
+set(QtSoap_SRCS src/qtsoap.cpp)
 
 QT4_WRAP_CPP(QtSoap_MOC_SRCS src/qtsoap.h)
 
-SET(SRCS ${QtSoap_MOC_SRCS} ${QtSoap_SRCS})
+set(SRCS ${QtSoap_MOC_SRCS} ${QtSoap_SRCS})
 
-FOREACH(_currentfile ${SRCS})
-    IF(NOT MSVC)
-        SET_SOURCE_FILES_PROPERTIES(${_currentfile} PROPERTIES COMPILE_FLAGS "-fPIC")
-    ENDIF()
-ENDFOREACH(_currentfile ${SRCS})
+foreach(_currentfile ${SRCS})
+    if(NOT MSVC)
+        set_source_files_properties(${_currentfile} PROPERTIES COMPILE_FLAGS "-fPIC")
+    endif()
+endforeach(_currentfile ${SRCS})
 
-ADD_LIBRARY(QtSoap STATIC ${SRCS})
+add_library(QtSoap STATIC ${SRCS})
 
 IF(NOT MSVC)
-    SET_TARGET_PROPERTIES(QtSoap PROPERTIES COMPILE_FLAGS "-fPIC")
-ENDIF()
+    set_target_properties(QtSoap PROPERTIES COMPILE_FLAGS "-fPIC")
+endif()
 
-TARGET_LINK_LIBRARIES(QtSoap ${QT_LIBRARIES})
+target_link_libraries(QtSoap ${QT_LIBRARIES})
 
-#INSTALL(TARGETS QtSoap ARCHIVE DESTINATION lib ${INSTALL_TARGETS_DEFAULT_ARGS})
+#install(TARGETS QtSoap ARCHIVE DESTINATION lib ${INSTALL_TARGETS_DEFAULT_ARGS})
