--- a/dngconverter/plugin/CMakeLists.txt
+++ b/dngconverter/plugin/CMakeLists.txt
@@ -1,17 +1,23 @@
+#
+# Copyright (c) 2010-2014, Gilles Caulier, <caulier dot gilles at gmail dot com>
+#
+# Redistribution and use is allowed according to the terms of the BSD license.
+# For details see the accompanying COPYING-CMAKE-SCRIPTS file.
+
 # ========================================================================================
 # Stand alone version
 
-SET(dngconverter_SRCS dngconverter.cpp ${dngconverter_common_SRCS})
+set(dngconverter_SRCS dngconverter.cpp ${dngconverter_common_SRCS})
 
-IF(WIN32)
-    REMOVE_DEFINITIONS(${KDE4_ENABLE_EXCEPTIONS})
-ENDIF()
+if(WIN32)
+    remove_definitions(${KDE4_ENABLE_EXCEPTIONS})
+endif()
 
 KDE4_ADD_APP_ICON(dngconverter_SRCS "../icons/*kipi-dngconverter.png")
 
 KDE4_ADD_EXECUTABLE(dngconverter ${dngconverter_SRCS})
 
-TARGET_LINK_LIBRARIES(dngconverter
+target_link_libraries(dngconverter
                       ${KDE4_KIO_LIBS}
                       ${KIPI_LIBRARIES}
                       ${KEXIV2_LIBRARIES}
@@ -22,17 +28,17 @@ TARGET_LINK_LIBRARIES(dngconverter
                       libdng
                      )
 
-INSTALL(TARGETS dngconverter ${INSTALL_TARGETS_DEFAULT_ARGS})
-INSTALL(PROGRAMS dngconverter.desktop DESTINATION ${XDG_APPS_INSTALL_DIR} )
+install(TARGETS  dngconverter         ${INSTALL_TARGETS_DEFAULT_ARGS})
+install(PROGRAMS dngconverter.desktop DESTINATION ${XDG_APPS_INSTALL_DIR} )
 
 # ========================================================================================
 # Plugin
 
-SET(kipiplugin_dngconverter_PART_SRCS plugin_dngconverter.cpp ${dngconverter_common_SRCS})
+set(kipiplugin_dngconverter_PART_SRCS plugin_dngconverter.cpp ${dngconverter_common_SRCS})
 
 KDE4_ADD_PLUGIN(kipiplugin_dngconverter ${kipiplugin_dngconverter_PART_SRCS})
 
-TARGET_LINK_LIBRARIES(kipiplugin_dngconverter
+target_link_libraries(kipiplugin_dngconverter
                       ${KDE4_KPARTS_LIBS}
                       ${KIPI_LIBRARIES}
                       ${KEXIV2_LIBRARIES}
@@ -43,8 +49,8 @@ TARGET_LINK_LIBRARIES(kipiplugin_dngconverter
                       libdng
                      )
 
-CONFIGURE_FILE(kipiplugin_dngconverter.desktop.cmake ${CMAKE_CURRENT_BINARY_DIR}/kipiplugin_dngconverter.desktop)
+configure_file(kipiplugin_dngconverter.desktop.cmake ${CMAKE_CURRENT_BINARY_DIR}/kipiplugin_dngconverter.desktop)
 
-INSTALL(FILES   ${CMAKE_CURRENT_BINARY_DIR}/kipiplugin_dngconverter.desktop DESTINATION ${SERVICES_INSTALL_DIR})
-INSTALL(TARGETS kipiplugin_dngconverter                                     DESTINATION ${PLUGIN_INSTALL_DIR})
-INSTALL(FILES   kipiplugin_dngconverterui.rc                                DESTINATION ${DATA_INSTALL_DIR}/kipi)
+install(FILES   ${CMAKE_CURRENT_BINARY_DIR}/kipiplugin_dngconverter.desktop DESTINATION ${SERVICES_INSTALL_DIR})
+install(TARGETS kipiplugin_dngconverter                                     DESTINATION ${PLUGIN_INSTALL_DIR})
+install(FILES   kipiplugin_dngconverterui.rc                                DESTINATION ${DATA_INSTALL_DIR}/kipi)
