--- a/expoblending/CMakeLists.txt
+++ b/expoblending/CMakeLists.txt
@@ -1,19 +1,25 @@
-SUBDIRS(icons)
+#
+# Copyright (c) 2010-2014, Gilles Caulier, <caulier dot gilles at gmail dot com>
+#
+# Redistribution and use is allowed according to the terms of the BSD license.
+# For details see the accompanying COPYING-CMAKE-SCRIPTS file.
 
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/importwizard
+subdirs(icons)
+
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/importwizard
                     ${CMAKE_CURRENT_SOURCE_DIR}/blendingdlg
                     ${CMAKE_CURRENT_SOURCE_DIR}/manager
                     ${CMAKE_CURRENT_SOURCE_DIR}/plugin
                    )
 
-INSTALL(DIRECTORY pics
+install(DIRECTORY pics
         DESTINATION ${DATA_INSTALL_DIR}/kipiplugin_expoblending
        )
 
 # =======================================================
 # Common source code
 
-SET(expoblending_common_SRCS
+set(expoblending_common_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/manager/manager.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/manager/actionthread.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/manager/enfusebinary.cpp
@@ -29,15 +35,15 @@ SET(expoblending_common_SRCS
    )
 
 # Adjust flag for static lib and 64 bits computers using -fPIC for GCC compiler (bug: #269903)
-FOREACH(_currentfile ${expoblending_common_SRCS})
-    IF(NOT MSVC)
-        SET_SOURCE_FILES_PROPERTIES(${_currentfile} PROPERTIES COMPILE_FLAGS "-fPIC")
-    ENDIF()
-ENDFOREACH(_currentfile ${expoblending_common_SRCS})
+foreach(_currentfile ${expoblending_common_SRCS})
+    if(NOT MSVC)
+        set_source_files_properties(${_currentfile} PROPERTIES COMPILE_FLAGS "-fPIC")
+    endif()
+endforeach(_currentfile ${expoblending_common_SRCS})
 
 KDE4_ADD_LIBRARY(libexpoblending STATIC ${expoblending_common_SRCS})
 
-TARGET_LINK_LIBRARIES(libexpoblending
+target_link_libraries(libexpoblending
                       ${KDE4_KPARTS_LIBS}
                       ${QT_AND_KDECORE_LIBS}
                       ${KIPI_LIBRARIES}
@@ -49,28 +55,28 @@ TARGET_LINK_LIBRARIES(libexpoblending
 # =======================================================
 # ExpoBlending plugin
 
-SET(kipiplugin_expoblending_PART_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/plugin/plugin_expoblending.cpp)
+set(kipiplugin_expoblending_PART_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/plugin/plugin_expoblending.cpp)
 
 KDE4_ADD_PLUGIN(kipiplugin_expoblending ${kipiplugin_expoblending_PART_SRCS})
 
-TARGET_LINK_LIBRARIES(kipiplugin_expoblending libexpoblending)
+target_link_libraries(kipiplugin_expoblending libexpoblending)
 
-CONFIGURE_FILE(plugin/kipiplugin_expoblending.desktop.cmake ${CMAKE_CURRENT_BINARY_DIR}/plugin/kipiplugin_expoblending.desktop)
+configure_file(plugin/kipiplugin_expoblending.desktop.cmake ${CMAKE_CURRENT_BINARY_DIR}/plugin/kipiplugin_expoblending.desktop)
 
-INSTALL(FILES   ${CMAKE_CURRENT_BINARY_DIR}/plugin/kipiplugin_expoblending.desktop DESTINATION ${SERVICES_INSTALL_DIR})
-INSTALL(TARGETS kipiplugin_expoblending                                            DESTINATION ${PLUGIN_INSTALL_DIR})
-INSTALL(FILES   plugin/kipiplugin_expoblendingui.rc                                DESTINATION ${DATA_INSTALL_DIR}/kipi)
+install(FILES   ${CMAKE_CURRENT_BINARY_DIR}/plugin/kipiplugin_expoblending.desktop DESTINATION ${SERVICES_INSTALL_DIR})
+install(TARGETS kipiplugin_expoblending                                            DESTINATION ${PLUGIN_INSTALL_DIR})
+install(FILES   plugin/kipiplugin_expoblendingui.rc                                DESTINATION ${DATA_INSTALL_DIR}/kipi)
 
 # =======================================================
 # Stand alone version of ExpoBlending plugin
 
-SET(expoblending_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/plugin/expoblending.cpp)
+set(expoblending_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/plugin/expoblending.cpp)
 
 KDE4_ADD_APP_ICON(expoblending_SRCS "./icons/*kipi-expoblending.png")
 
 KDE4_ADD_EXECUTABLE(expoblending ${expoblending_SRCS})
 
-TARGET_LINK_LIBRARIES(expoblending libexpoblending)
+target_link_libraries(expoblending libexpoblending)
 
-INSTALL(TARGETS expoblending ${INSTALL_TARGETS_DEFAULT_ARGS})
-INSTALL(PROGRAMS plugin/expoblending.desktop DESTINATION ${XDG_APPS_INSTALL_DIR} )
+install(TARGETS expoblending ${INSTALL_TARGETS_DEFAULT_ARGS})
+install(PROGRAMS plugin/expoblending.desktop DESTINATION ${XDG_APPS_INSTALL_DIR})
